# architect

./: .gitignore  CMakeLists.txt  main.cpp  prebuild.sh
.github/workflows/: architect_ci.yml
autogenerator/: CMakeLists.txt  build_autogen.sh  main.cpp
autogenerator/include/: iautogen.h
libs/: CMakeLists.txt
libs/quadratic_equation/: CMakeLists.txt  unittests.cmake
libs/quadratic_equation/include/: quadratic_solver.h
libs/quadratic_equation/src/: quadratic_solver.cpp
libs/spacebattle/: CMakeLists.txt  unittests.cmake
libs/spacebattle/ifaceproto/: fuelable.proto  movable.proto  rotatable.proto
libs/spacebattle/include/: burn_fuel.h  change_velocity.h  check_fuel.h  command.h  direction.h  empty_command.h  exception_handler.h  fuelable.h  fuelable_adapter.h  ioc.h  log_command.h  loop.h  macro_command.h  movable.h  movable_adapter.h  movable_adapter_with_course.h  move.h  move_straight.h  repeat_command.h  repeat_twice_command.h  rotatable.h  rotatable_adapter.h  rotate.h  spaceship.h  threadsafe_q.h  uobject.h  vector.h
libs/spacebattle/include/adapters/: fuelable_adapter.h  movable_adapter.h  movable_adapter_with_course.h  rotatable_adapter.h
libs/spacebattle/include/commands/: burn_fuel.h  change_velocity.h  check_fuel.h  command.h  empty_command.h  ioc_init.h  log_command.h  macro_command.h  move.h  move_straight.h  repeat_command.h  repeat_twice_command.h  rotate.h  start_loop.h
libs/spacebattle/include/exceptions/: check_fuel_exception.h  empty_exception.h
libs/spacebattle/include/interfaces/: rotatable.h
libs/spacebattle/src/: direction.cpp  exception_handler.cpp  ioc.cpp  loop.cpp  movable_adapter.cpp  move.cpp  rotatable_adapter.cpp  rotate.cpp  spaceship.cpp
libs/spacebattle/src/adapters/: movable_adapter.cpp  rotatable_adapter.cpp
libs/spacebattle/src/commands/: ioc_init.cpp  log_command.cpp  move.cpp  rotate.cpp
libs/spacebattle/tests/: test.cxx
libs/spacebattle/tests/include/: #spacebattle_tests.h#  .#spacebattle_tests.h  autogen_tests.h  event_loop_tests.h  ioc_tests.h  macro_commands_tests.h  manual_reset_event.h  mock.h  solid_exception_tests.h  spacebattle_tests.h
tests/: CMakeLists.txt  test.cxx  tests_architect
